// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/loading/LoadingWrapper showing content with children: showing content with children 1`] = `"text"`;

exports[`components/widgets/loading/LoadingWrapper showing content without children: showing content without children 1`] = `""`;

exports[`components/widgets/loading/LoadingWrapper showing spinner with text: showing spinner with text 1`] = `
<injectIntl(LoadingSpinner)
  text="test"
/>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner without text: showing spinner without text 1`] = `
<injectIntl(LoadingSpinner)
  text={null}
/>
`;
